--- a/qodana.yaml
+++ b/qodana.yaml
@@ -29,4 +29,4 @@ profile:
 #  - id: <plugin.id> #(plugin id can be found at https://plugins.jetbrains.com)
 
 #Specify Qodana linter for analysis
-linter: jetbrains/qodana-dotnet:latest
+linter: jetbrains/qodana-dotnet:2024.3
