--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,6 @@ steps:
 - task: QodanaScan@2024
   inputs:
     args: '--ide,QDNET'
+    uploadResult: true
   env:
     QODANA_TOKEN: $(QODANA_TOKEN)
-    AGENT_USE_NODE10: true
-
