--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,6 @@ steps:
 - task: QodanaScan@2024
   inputs:
     uploadResult: true
-    args: --config,qodana.yaml
+    args: --config,qodana.yaml,--project-dir,ConsoleApp1
   env:
     QODANA_TOKEN: $(QODANA_TOKEN)
