--- a/Solution.Dot/Console.App1/Console.App1.csproj
+++ b/Solution.Dot/Console.App1/Console.App1.csproj
@@ -20,4 +20,8 @@
         <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
     </Reference>
     </ItemGroup>
+    <ItemGroup>
+        <None Remove="qwe.js" />
+        <EmbeddedResource Include="qwe.js" />
+    </ItemGroup>
 </Project>
